--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1655,7 +1655,7 @@
 /* Banner */
 
 	#banner {
-		background: #CCE8F4 url("../../images/top.png");
+		background: #CCE8F4 url("../../images/top.jpg");
 		background-position: center center;
 		background-size: auto 100%;
 		background-repeat: no-repeat;
